3. Custom MAI icons.
4. Use block 'i' icon for 'Information' in navigation drawer titlebar.
5. Add option to show settings actions as a row of icons.
6. Add option to always show settings (and shortcut) actions.
7. De-support 'system' section from custom actions.
8. Only single 'settings' custom action supported, and must have icon or svg
   defined.

5.5.2
-----
1. If at top-level then Ctr+F should always open 'Search library', even if 'My
   Music' is hidden.

5.5.1
-----
1. Enable repeat by default for alarms.
2. Adjust list menu button position to cater for overlay scrollbars in Firefox.
3. Adjust volume control layout for fixed volume players in 'Manage players'
   dialog.
4. Remove composer role restraint when checking if all artists, etc., should
   appear in track subtitle.
5. Only show 'N Compositions' when called from 'Compositions' action.

5.5.0
-----
 1. If using Lyrion theme and colour from cover, then default to green
    highlight.
 2. Add option to show home-screen shortcuts in navigation drawer.
 3. Allow smaller grid items if screen 350px or less.
 4. Scale grid icons by grid size.
 5. If viewing images from browse then allow swiping left/right to view
    prev/next images.
 6. Add button, shown on hover, to view images.
 7. Add play/add/insert/shuffle buttons when viewing some images.
 8. Add captions to images in viewer.
 9. Only show detailed sub-toolbar for online items if also have space for
    image.
10. If using rounded covers then use circles for artist images.
11. Support plural/singular user-defined role names.
12. Fix showing 'composed by', etc., in queue and elsewhere.
13. Fix showing/hiding of 'Play shuffled' action in certain cases.
14. Fix 'Bookmarks' plugin.
15. Only use detailed sub-toolbar if wide enough for cover or have text for
    at least one of bottom 2 lines.

5.4.4
-----
1. Add 'Show image' to more context menus.
2. Fix add/play and menu icons sometimes showing when they should not.